# Alte

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VISION.md  bugs  cppcheck_report.txt  cppcheck_report_configured.txt  cppcheck_report_final.txt  install.sh  update_themes.py  این اینده است که باید امروز پیاده کنیم
AlteEditor/: CMakeLists.txt  Hadaf.txt  resources.qrc
AlteEditor/src/: AlteRope.cpp  AlteRope.h  AlteThemeManager.cpp  AlteThemeManager.h  main.cpp  splashscreen.cpp  syntaxhighlighter.cpp  syntaxhighlighter.h
alte/: CMakeLists.txt  README.md
alte/src/: MainWindow.cpp  MainWindow.h  main.cpp
build_alte_editor/: AlteEditor  CPackConfig.cmake  CPackSourceConfig.cmake
build_alte_editor/.qt/: QtDeploySupport.cmake
build_alte_editor/AlteEditor_autogen/: deps  mocs_compilation.cpp
build_alte_editor/AlteEditor_autogen/EWIEGA46WW/: qrc_resources.cpp
build_alte_editor/AlteEditor_autogen/HLEDFKCYFS/: moc_splashscreen.cpp  moc_splashscreen.cpp.d
build_alte_editor/AlteEditor_autogen/UVLADIE3JM/: moc_syntaxhighlighter.cpp  moc_syntaxhighlighter.cpp.d
build_alte_editor/AlteEditor_autogen/include/: main.moc  main.moc.d
build_temp/: Alte  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  alte-0.1.0-Linux.deb  install_manifest.txt
build_temp/Alte_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_temp/Alte_autogen/6YEA5652QU/: moc_AlteSyntaxHighlighter.cpp  moc_AlteSyntaxHighlighter.cpp.d
build_temp/_CPack_Packages/Linux/DEB/alte-0.1.0-Linux/: control  md5sums
build_temp/_CPack_Packages/Linux/DEB/alte-0.1.0-Linux/usr/share/applications/: alte.desktop
dummy_install/share/alte/resources/: Alte.qrc
dummy_install/share/alte/resources/syntax/: python.json
dummy_install/share/alte/resources/themes/: default_dark.json  default_dark_neon.json
include/: AlteRope.h  AlteSyntaxHighlighter.h  AlteTheme.h  AlteThemeManager.h  LineNumberArea.h  MainWindow.h  splashscreen.h
packaging/linux/: alte.desktop
resources/syntax/: c.json  cpp.json  css.json  html.json  java.json  javascript.json  plaintext.json  python.json  test_multiline.json
resources/themes/: ayu_mirage.json  default_dark.json  default_dark_neon.json  solarized_light.json
src/: AlteRope.cpp  AlteSyntaxHighlighter.cpp  AlteTheme.cpp  AlteThemeManager.cpp  LineNumberArea.cpp  LineNumberArea.h  MainWindow.cpp  ScratchpadDialog.cpp  ScratchpadDialog.h  ShortcutManager.cpp  ShortcutManager.h  ShortcutSettingsDialog.cpp  ShortcutSettingsDialog.h  main.cpp  splashscreen.cpp
